foundation-objs/main/default/objects/Escalation_Matrice__mdt/Escalation_Matrice__mdt.object-meta.xml
<CustomObject>
    <label>Escalation Matrice</label>
    <pluralLabel>Escalation Matrices</pluralLabel>
</CustomObject>