foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/Is_Field_Reference__c.field-meta.xml
<CustomField>
    <fullName>Is_Field_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the receiver is referred from any field value.</inlineHelpText>
    <label>Is Field Reference?</label>
    <type>Checkbox</type>
</CustomField>