foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/Is_Role__c.field-meta.xml
<CustomField>
    <fullName>Is_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the receiver is a Role</inlineHelpText>
    <label>Is Role?</label>
    <type>Checkbox</type>
</CustomField>