foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/IsUser__c.field-meta.xml
<CustomField>
    <fullName>IsUser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the receiver is a direct User mentioned in the Sheet.</inlineHelpText>
    <label>IsUser</label>
    <type>Checkbox</type>
</CustomField>