foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
                <default>true</default>
                <label>L1</label>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>