foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/Priority_List__c.field-meta.xml
<CustomField>
    <fullName>Priority_List__c</fullName>
    <label>Priority List</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MS</fullName>
                <default>true</default>
                <label>MS</label>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>MaxITC</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>