foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/Reference_Field_Details__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field_Details__c</fullName>
    <inlineHelpText>ObjectName.FieldName</inlineHelpText>
    <label>Reference Field Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>