foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/Role_Ids__c.field-meta.xml
<CustomField>
    <fullName>Role_Ids__c</fullName>
    <inlineHelpText>Please mention the role ids in comma separated</inlineHelpText>
    <label>Role Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>