foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>