foundation-objs/main/default/objects/Escalation_Matrice__mdt/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>If IsUser? == True, then Please fill the field value.</description>
    <inlineHelpText>If IsUser? is checked, We need to have a value in this field.</inlineHelpText>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>