foundation-objs/main/default/objects/Escalation_Matrice__mdt/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Priority_List__c</columns>
    <columns>Priority_Level__c</columns>
    <columns>IsUser__c</columns>
    <columns>User_Email__c</columns>
    <columns>Is_Role__c</columns>
    <columns>Role_Ids__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
</ListView>